--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -42,7 +42,7 @@ footer {
 
 .flash-message {
   width:100%;
-  position:absolute;
+  position:fixed;
   bottom:0;
   left:0;
   background-color:yellow;
