--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,7 +14,11 @@ footer {
   margin-top:20px;
   padding-top:20px;
   padding-bottom:20px;
-  background-color:#efefef;
+  background-color:#DEDEDE;
+}
+
+body {
+	background-color:#DEDEDE;
 }
 
 /* count indicator near icons */
