--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -53,3 +53,11 @@ body {
   text-align:center;
   padding:5px;
 }
+
+.table-bordered {
+  background-color: white;
+}
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+  background-color: #D04C00;
+}
